update security config and CORS